--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -11,6 +11,11 @@
   <body>
     <script type="text/javascript" src="/js/main.js" charset="utf-8"></script>
     <div class="container">
+      <form action="/login" method="POST">
+        <input name="username" type="text" />
+        <input name="password" type="text" />
+        <button type="submit" >SYKA</button>
+      </form>
     </div>  
   </body>
 </html> 
