--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -14,8 +14,39 @@
       <form action="/login" method="POST">
         <input name="username" type="text" />
         <input name="password" type="text" />
-        <button type="submit" >SYKA</button>
+        <button type="submit" >Я кнопка</button>
       </form>
+
+      <input id="text">
+      <button onclick="send()">Send</button>
+      <div id="output>" ></div>
     </div>  
   </body>
+<script>
+  var text = document.getElementById('text');
+  var output = document.getElementById('output');
+  var ws = new WebSocket("ws://localhost:3000/echo");
+
+  ws.onopen = function () {
+    display('Connection open...');
+  }
+
+  ws.onmessage = function (message) {
+    display(message.data);
+    text.value = '';
+  }
+
+  function send() {
+    ws.send(text.value);
+  }
+
+  function display(message) {
+    var p = document.createElement("p");
+    var new_text = document.createTextNode(message);
+    p.appendChild(new_text);
+
+      output.appendChild(p);
+
+  }
+</script>
 </html> 
